--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    
     <style>
       .rounded-button {
             padding: 10px 20px;
-            border-radius: 15px;
-            background-color: #245aa1;
+            border-radius: 8px;
+            background-color: #FF6700;
             color: white;
             border: none;
             text-align: center;
@@ -18,23 +20,23 @@
             cursor: pointer;
         }
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f6fcff;
-            color: #3e444c;
+            color: #000000;
             transition: background-color 0.5s;
         }
 
         header {
-            background-color: #405167;
+            background-color: #FF6700 ;
             color: #ffffff;
             text-align: center;
             padding: 1em;
             font-size: 0.9em;
         }
         header:hover {
-            background-color: #3e444c;
+            background-color:  #ff800a  ;
         }
 
         section {
@@ -53,18 +55,18 @@
 
         footer {
             background-color: #00000000;
-            color: #245aa1;
+            color: #FF6700;
             text-align: center;
             padding: 1em;
             font-size: 0.9em;
         }
 
         footer:hover {
-            background-color: #ffffff00;
+            background-color: #7097ea00 ;
         }
 
         h2 {
-            color: #245aa1;
+            color: #000000 ;
             padding-bottom: 0.5em;
             margin-bottom: 1em;
             transition: color 0.3s;
@@ -203,18 +205,15 @@
     </section>
 
     
-
     <section id="conatct">
         <h2>Contact Me</h2>
         <p>Chat on Whatsapp:  <a href="https://wa.link/t4rmhe">Let's talk!</a></p>
         <p>Visit Instagram:  <a href="https://www.instagram.com/suyebtanbeer">@suyebtanbeer</a></p>
     </section>
     </section>
-
     <footer>
         <p>Thanks for visiting!</p>
         <p>Coded in HTML & CSS by Tanmay Karmakar</p>
-        <p>Visit Instgram:<a href="https://www.instagram.com/thattanmayy">@thattanmayy</a></p>
     </footer>
 </body>
 </html>
