--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       .rounded-button {
             padding: 10px 20px;
             border-radius: 8px;
-            background-color: #FF6700;
+            background-color: #7BA850;
             color: white;
             border: none;
             text-align: center;
@@ -29,15 +29,15 @@
         }
 
         header {
-            background-color: #FF6700 ;
-            color: #ffffff;
-            text-align: center;
-            padding: 1em;
-            font-size: 0.9em;
+            background-image: url('https://lh3.googleusercontent.com/drive-viewer/AEYmBYR5LFEua-SzpQi3P2kGB1TSUYMmXPNY5_s0Zvr6fPh6aEQ9zBfjKU8ROt4xt05gMheNXpZgV4YdofVyGX9PQX3HF8cUIQ=s1600'); /* Replace 'your-background-image.jpg' with the path to your image */
+            background-size: cover;
+            background-position: center;
+            color: #fff; 
+            text-align: left;
+            padding: 10em;
+            position: relative;
         }
-        header:hover {
-            background-color:  #ff800a  ;
-        }
+
 
         section {
             margin: 2em;
@@ -55,7 +55,7 @@
 
         footer {
             background-color: #00000000;
-            color: #FF6700;
+            color: #7BA850;
             text-align: center;
             padding: 1em;
             font-size: 0.9em;
@@ -151,8 +151,7 @@
 
 <body>
     <header>
-        <h1>Suyeb Tanbeer Borah</h1>
-        <h3>Welcome to my page! <br> Swipe down to see my artworks and can also order your custom portraits.</h3>
+        <h1></h1>
     </header>
 
     <section id="images">
