--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ dea<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -157,9 +157,11 @@
     <section id="images">
         <h2>Art Gallery (Human Portraits)</h2>
         <div class="image-container">
-            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS0g5qbkZGUbLs22sfx02ZM9nDAC1ELak_Q1Q-9Vr-3eqw-cjxwdmyEhbIltIZ3Sl3Sx8qHAYsLY72AW1ZyAiga7_jh=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS0g5qbkZGUbLs22sfx02ZM9nDAC1ELak_Q1Q-9Vr-3eqw-cjxwdmyEhbIltIZ3Sl3Sx8qHAYsLY72AW1ZyAiga7_jh=s1600" /> </a>
-            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSbxcS4eQb2m9g_WjjE1RjuBsRSWrNS9heBL6muhL5bLiTW3POlwfrmpsJ1R31kD2bK17ESCg8UtE5fD3CoeTK4c35N=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSbxcS4eQb2m9g_WjjE1RjuBsRSWrNS9heBL6muhL5bLiTW3POlwfrmpsJ1R31kD2bK17ESCg8UtE5fD3CoeTK4c35N=s1600" /> </a>
-            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTPYR_nTHypqxtuPI_cpvhuonhQ7PIPPULokNFiGrINpNeHi9pU6FOf9hjLhv4drTrqFddTuoaSARpyTYZdoKqbUPFvcg=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTPYR_nTHypqxtuPI_cpvhuonhQ7PIPPULokNFiGrINpNeHi9pU6FOf9hjLhv4drTrqFddTuoaSARpyTYZdoKqbUPFvcg=s1600" /> </a>
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTpGjkv9Sx9OnH7P5bcfVrGmOVns7l35sOW0oGWYKcq-r3G-ckNlW0Ln0sTH8G9iiyFXimHxvNeoBAU3Leu_HB7epqCBw=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTpGjkv9Sx9OnH7P5bcfVrGmOVns7l35sOW0oGWYKcq-r3G-ckNlW0Ln0sTH8G9iiyFXimHxvNeoBAU3Leu_HB7epqCBw=s1600" /> </a>
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRxBipIiEUATY1EZ4DCYuiFtw5u4gxwR8KvUZVKvNDdIrVpPWnZQcZV7dTF0qSzoJ3MVfCvhwt2dnxniJc8spMKJSba6Q=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRxBipIiEUATY1EZ4DCYuiFtw5u4gxwR8KvUZVKvNDdIrVpPWnZQcZV7dTF0qSzoJ3MVfCvhwt2dnxniJc8spMKJSba6Q=s1600" /> </a>
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYR0am6bSaUeMPYF2rDVwm1JIE6xul855q6dgDIOM412kZP8E0byvREBZx6cc50rQ_g9FXp5kRwe4j-e4f3aJZM-3oPW=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYR0am6bSaUeMPYF2rDVwm1JIE6xul855q6dgDIOM412kZP8E0byvREBZx6cc50rQ_g9FXp5kRwe4j-e4f3aJZM-3oPW=s1600" /> </a>
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQIoOA-YXUlr1yYWdg1APNp-Fwb4KPjEUoxIn8u3mXYZ2wuXlmi6PTZ1AH8er0scVUdG0D-2ahUKlNRtmX6_atwxFz-vw=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQIoOA-YXUlr1yYWdg1APNp-Fwb4KPjEUoxIn8u3mXYZ2wuXlmi6PTZ1AH8er0scVUdG0D-2ahUKlNRtmX6_atwxFz-vw=s1600" /> </a>
+
             
             <!-- Add more images as needed -->
         </div>
@@ -177,9 +179,30 @@
     <section id="images2">
         <h2>Art Gallery (Anime Portraits)</h2>
         <div class="image-container">
-            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQZxOVxZNS8Qx0AMyASd0BHBFLDcT2FHXDrEKb9cOqDHSl6BdyyQGLKwXbz8Hd8WWiP2aHYS1ReHHaTnvtPf95OJDtp7w=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQZxOVxZNS8Qx0AMyASd0BHBFLDcT2FHXDrEKb9cOqDHSl6BdyyQGLKwXbz8Hd8WWiP2aHYS1ReHHaTnvtPf95OJDtp7w=s1600" /> </a>
-            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTHe7Gw_rnlGueDS7AShfW16nezj4_z2vwBXJKMl9FGfGCShB5iyvSwGdHP6k6wT2n46mnT0FLppOKMIWbjA6Quj1SJ-w=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTHe7Gw_rnlGueDS7AShfW16nezj4_z2vwBXJKMl9FGfGCShB5iyvSwGdHP6k6wT2n46mnT0FLppOKMIWbjA6Quj1SJ-w=s1600" /> </a>
-            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS6Ogku_59jrmVosi32QWTkxVsQVmGaZxvbx6PiLjgEtBHj9Vc6etjvWbueT7NVwL0ckCsHhr7UHH-qv0xZBrhcMcycrg=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS6Ogku_59jrmVosi32QWTkxVsQVmGaZxvbx6PiLjgEtBHj9Vc6etjvWbueT7NVwL0ckCsHhr7UHH-qv0xZBrhcMcycrg=s1600" /> </a>
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSlBL1613x3ih6LL7xHuDm-UQXvoN2gJ8UjlJ9lfgEenUnLz-v0g1R1ZrY8uXc58ztXD1nG5KMPtihXXhuSi5g2JUPPEQ=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSlBL1613x3ih6LL7xHuDm-UQXvoN2gJ8UjlJ9lfgEenUnLz-v0g1R1ZrY8uXc58ztXD1nG5KMPtihXXhuSi5g2JUPPEQ=s1600" /> </a>
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTWcuwYCzDvqpS19uFwYIn7Lg5qYX9pRiYU25EWnmXSWbWOcCLMTGt-s3WkJnyRUSlfAnChDJWvwcstOQFKRvCEln8Q=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTWcuwYCzDvqpS19uFwYIn7Lg5qYX9pRiYU25EWnmXSWbWOcCLMTGt-s3WkJnyRUSlfAnChDJWvwcstOQFKRvCEln8Q=s1600" /> </a>
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSwrHqZQTHG4113UPpR9QA5HgqRV6GmW6gESWKUitquDRqxnjnpVKtqFtcN7GMeZf-Ya9-QavR7Q2GoVJoWXlI8cuCrxQ=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYSwrHqZQTHG4113UPpR9QA5HgqRV6GmW6gESWKUitquDRqxnjnpVKtqFtcN7GMeZf-Ya9-QavR7Q2GoVJoWXlI8cuCrxQ=s1600" /> </a>
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTxEqj0Oyd5eJt72RLuNtVNDUQ5iD5F3t3lkUROP7GoKYgiUm6W6x_ny3LVsvuRz0Yn1OYan26M124LBbRl8dJDuFzrJw=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTxEqj0Oyd5eJt72RLuNtVNDUQ5iD5F3t3lkUROP7GoKYgiUm6W6x_ny3LVsvuRz0Yn1OYan26M124LBbRl8dJDuFzrJw=s1600" /> </a>
+
+            <!-- Add more images as needed -->
+        </div>
+    </section>
+
+
+    <section id="images2">
+        <div class="image-container">
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTOe1orTeZfLsDmLhhEYhx18FycjnRujJKeG-ndArpcU4t_WyHAUwIsKZTIlzmnCy_Alj8nj3FOpTPoqY6G3QbBwdZIoQ=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTOe1orTeZfLsDmLhhEYhx18FycjnRujJKeG-ndArpcU4t_WyHAUwIsKZTIlzmnCy_Alj8nj3FOpTPoqY6G3QbBwdZIoQ=s1600" /> </a>
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS0T9mbpdv_5mPVLkKRHBFviEgUk2D75ge8AUzakWaHvDPkvw4tut2PBrX244s_EB45QjWuE9BsA-P04YhMkR9AXKZGiQ=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYS0T9mbpdv_5mPVLkKRHBFviEgUk2D75ge8AUzakWaHvDPkvw4tut2PBrX244s_EB45QjWuE9BsA-P04YhMkR9AXKZGiQ=s1600" /> </a>
+        </div>
+    </section>
+
+    <section id="images2">
+        <div class="image-container">
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYT-27U5pVmm4ANZjDEpToP1vPHdbsK-6gmWmwz5yHu5N9pylIcszgP_3wTCmP5juS6qnUrS78MbFawX8w1Uwmvu-GD9Qw=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYT-27U5pVmm4ANZjDEpToP1vPHdbsK-6gmWmwz5yHu5N9pylIcszgP_3wTCmP5juS6qnUrS78MbFawX8w1Uwmvu-GD9Qw=s1600" /> </a>
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRERagA2GOf3HZw-73RqKjmscyA2l95cT4r5rgOKvoFSiRciYTbSKjIX1Uwk5zQlV1mBTZhtvuXXtFJGZod0AfepQI1Ig=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRERagA2GOf3HZw-73RqKjmscyA2l95cT4r5rgOKvoFSiRciYTbSKjIX1Uwk5zQlV1mBTZhtvuXXtFJGZod0AfepQI1Ig=s1600" /> </a>
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRx_Ivy9NZB-mHEVoiy4JZpS4eWx49qJFwv7BjClIRgKX3N4feIFr9HQyKKkmycOq9LrVe8rLEN_lMcVX2BDKsDiG-B2Q=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYRx_Ivy9NZB-mHEVoiy4JZpS4eWx49qJFwv7BjClIRgKX3N4feIFr9HQyKKkmycOq9LrVe8rLEN_lMcVX2BDKsDiG-B2Q=s1600" /> </a>
+            <a href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTLnExExKSMOWAY-jcEeZV7JxymRNKFZ3HXbg_KeC_QhsaqvujcLZ4dHzKJOSO3pH7bNXOEPeQ1sNi8Mr8DfKuysN5luA=s1600?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/drive-viewer/AEYmBYTLnExExKSMOWAY-jcEeZV7JxymRNKFZ3HXbg_KeC_QhsaqvujcLZ4dHzKJOSO3pH7bNXOEPeQ1sNi8Mr8DfKuysN5luA=s1600" /> </a>
+
 
             <!-- Add more images as needed -->
         </div>
