--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="icon" href="https://lh3.googleusercontent.com/drive-viewer/AEYmBYQUBqqhKtVlj-3aJh2LVrWLkhRxqQMXJNl-Jxbb0M4aFIip-JgyppzhkFnOP7JJABIKbL_sIqDlV93___l_FoshgZPW=s1600" type="image/x-icon">
+<link rel="shortcut icon" href=https://lh3.googleusercontent.com/drive-viewer/AEYmBYQUBqqhKtVlj-3aJh2LVrWLkhRxqQMXJNl-Jxbb0M4aFIip-JgyppzhkFnOP7JJABIKbL_sIqDlV93___l_FoshgZPW=s1600" type="image/x-icon">
+
     
     <style>
       .rounded-button {
@@ -29,7 +32,7 @@
         }
 
         header {
-            background-image: url('https://lh3.googleusercontent.com/drive-viewer/AEYmBYR5LFEua-SzpQi3P2kGB1TSUYMmXPNY5_s0Zvr6fPh6aEQ9zBfjKU8ROt4xt05gMheNXpZgV4YdofVyGX9PQX3HF8cUIQ=s1600'); /* Replace 'your-background-image.jpg' with the path to your image */
+            background-image: url('https://lh3.googleusercontent.com/drive-viewer/AEYmBYSQCO9IjxMevqsetUcbKnKIQVdAlmP_rQ5CPI1v0Y5SUXSR9t8Zh9YwL-bfEW0OXKM1f9LdOluH-WAyDpMhKlnk5Aqn6Q=s1600');
             background-size: cover;
             background-position: center;
             color: #fff; 
@@ -170,10 +173,10 @@
 
     <section id="prices">
         <h2>Price Tags (Human Portraits)</h2>
-        <p>Single Person Portrait (A4 Size): ₹300 INR<a href="https://wa.link/t4rmhe" class="rounded-button">Click to Order</a></p>
-        <p>Couple Portrait (A4 Size): ₹500 INR<a href="https://wa.link/t4rmhe" class="rounded-button">Click to Order</a></p>
-        <p>Full Family Portrait: ₹700 INR<a href="https://wa.link/t4rmhe" class="rounded-button">Click to Order</a></p>
-        <p>Portrait (Above 5 Persons): ₹1000 INR<a href="https://wa.link/t4rmhe" class="rounded-button">Click to Order</a></p>
+        <p>Single Person Portrait (A4 Size): ₹300 INR<a href="https://wa.link/4t4pic" class="rounded-button">Click to Order</a></p>
+        <p>Couple Portrait (A4 Size): ₹500 INR<a href="https://wa.link/jl4mz5" class="rounded-button">Click to Order</a></p>
+        <p>Full Family Portrait: ₹700 INR<a href="https://wa.link/hswbok" class="rounded-button">Click to Order</a></p>
+        <p>Portrait (Above 5 Persons): ₹1000 INR<a href="https://wa.link/cj2eeo" class="rounded-button">Click to Order</a></p>
     </section>
 
     <section id="images2">
@@ -210,10 +213,10 @@
 
     <section id="prices2">
         <h2>Price Tags (Anime Portraits)</h2>
-        <p>Sketch (A4 Size): ₹150 INR<a href="https://wa.link/t4rmhe" class="rounded-button">Click to Order</a></p>
-        <p>Sketch (A5 Size): ₹100 INR<a href="https://wa.link/t4rmhe" class="rounded-button">Click to Order</a></p>
-        <p>Colouring Drawing (A4 Size): ₹250 INR<a href="https://wa.link/t4rmhe" class="rounded-button">Click to Order</a></p>
-        <p>Colouring Drawing (A5 Size): ₹150 INR<a href="https://wa.link/t4rmhe" class="rounded-button">Click to Order</a></p>
+        <p>Sketch (A4 Size): ₹150 INR<a href="https://wa.link/51k3qc" class="rounded-button">Click to Order</a></p>
+        <p>Sketch (A5 Size): ₹100 INR<a href="https://wa.link/8dgpxj" class="rounded-button">Click to Order</a></p>
+        <p>Colouring Drawing (A4 Size): ₹250 INR<a href="https://wa.link/8pa0jh" class="rounded-button">Click to Order</a></p>
+        <p>Colouring Drawing (A5 Size): ₹150 INR<a href="https://wa.link/2bns8o" class="rounded-button">Click to Order</a></p>
     </section>
 
     <section id="about">
